Добавляет скелет главной

--- a/index.html
+++ b/index.html
@@ -143,6 +143,29 @@
                         <div class="section-content">
                             <h3 class="section-title h3">Игорь Демьяненко</h3>
                             <p class="section-text">Product Designer</p>
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="#" class="">
+                                <svg class="instagram" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#instagram"></use>
+                                </svg></a>
+                                </li>
+                                <li>
+                                <svg class="twitter" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#twitter"></use>
+                                </svg>
+                                </li>
+                                <li>
+                                <svg class="facebook" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#facebook"></use>
+                                </svg>
+                                </li>
+                                <li>
+                                <svg class="linkedin" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#linkedin"></use>
+                                </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
 
