Добавляет скелет главной

--- a/index.html
+++ b/index.html
@@ -145,22 +145,25 @@
                             <p class="section-text">Product Designer</p>
                             <ul class="social-icons">
                                 <li>
-                                    <a href="#" class="">
+                                    <a href="#" class="master-social-links">
                                 <svg class="instagram" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#instagram"></use>
                                 </svg></a>
                                 </li>
                                 <li>
+                                    <a href="#" class="master-social-links"></a>
                                 <svg class="twitter" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#twitter"></use>
                                 </svg>
                                 </li>
                                 <li>
+                                    <a href="#" class="master-social-links"></a>
                                 <svg class="facebook" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#facebook"></use>
                                 </svg>
                                 </li>
                                 <li>
+                                    <a href="#" class="master-social-links"></a>
                                 <svg class="linkedin" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#linkedin"></use>
                                 </svg>
@@ -175,6 +178,32 @@
                         <div class="section-content">
                             <h3 class="section-title h3">Ольга Репина</h3>
                             <p class="section-text">Frontend Developer</p>
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="#" class="master-social-links">
+                                        <svg class="instagram" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="twitter" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="facebook" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="linkedin" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
 
@@ -184,6 +213,32 @@
                         <div class="section-content">
                             <h3 class="section-title h3">Николай Тарасов</h3>
                             <p class="section-text">Marketing</p>
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="#" class="master-social-links">
+                                        <svg class="instagram" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="twitter" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="facebook" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="linkedin" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
 
@@ -193,6 +248,32 @@
                         <div class="section-content">
                             <h3 class="section-title h3">Михаил Ермаков</h3>
                             <p class="section-text">UI Designer</p>
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="#" class="master-social-links">
+                                        <svg class="instagram" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="twitter" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#twitter"></use>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="facebook" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#facebook"></use>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <a href="#" class="master-social-links"></a>
+                                    <svg class="linkedin" width="20" height="20">
+                                        <use href="./images/symbol-defs.svg#linkedin"></use>
+                                    </svg>
+                                </li>
+                            </ul>
                         </div>
                     </li>
 
