--- a/index.html
+++ b/index.html
@@ -151,22 +151,22 @@
                                 </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                 <svg class="twitter" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#twitter"></use>
-                                </svg>
+                                </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                 <svg class="facebook" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#facebook"></use>
-                                </svg>
+                                </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                 <svg class="linkedin" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#linkedin"></use>
-                                </svg>
+                                </svg></a>
                                 </li>
                             </ul>
                         </div>
@@ -186,22 +186,22 @@
                                         </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="twitter" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#twitter"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="facebook" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#facebook"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="linkedin" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#linkedin"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                             </ul>
                         </div>
@@ -221,22 +221,22 @@
                                         </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="twitter" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#twitter"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="facebook" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#facebook"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="linkedin" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#linkedin"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                             </ul>
                         </div>
@@ -256,22 +256,22 @@
                                         </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="twitter" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#twitter"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="facebook" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#facebook"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="master-social-links"></a>
+                                    <a href="#" class="master-social-links">
                                     <svg class="linkedin" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#linkedin"></use>
-                                    </svg>
+                                    </svg></a>
                                 </li>
                             </ul>
                         </div>
